--- a/vagrant/ansible/roles/consul/vars/main.yml
+++ b/vagrant/ansible/roles/consul/vars/main.yml
@@ -11,4 +11,4 @@ consul_profile_script: /etc/profile.d/consul.sh
 consul_flags: "-dev -ui -client 0.0.0.0"
 envoy_url_rpm: https://rpm.dl.getenvoy.io/public/rpm/any-distro/any-version/x86_64/getenvoy-envoy-{{ envoy_version }}.x86_64.rpm
 envoy_url_deb: "https://deb.dl.getenvoy.io/public/deb/any-distro/pool/any-version/main/g/ge/getenvoy-envoy_{{ envoy_version }}_amd64.deb"
-cni_url: https://github.com/containernetworking/plugins/releases/download/v{{ cni_version }}/cni-plugins-linux-amd64-v{{ cni_version }}.tgz
+cni_url: https://github.com/containernetworking/plugins/releases/download/v{{ cni_version }}/cni-plugins-linux-{{ 'arm64' if ansible_facts['architecture'] == 'aarch64' else 'amd64' }}-v{{ cni_version }}.tgz
