--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -69,7 +69,7 @@ else
   grafana_version = ENV['GRAFANA_VERSION'] || "8.1.0-1"
 end
 # Tests tag to permorm only tests ansible tasks
-tests_tag = ENV['TESTS_ONLY']
+# tests_tag = ENV['TESTS_ONLY']
 
 # Provision only these ansible roles
 tags_only = ENV['TAGS_ONLY']
@@ -139,9 +139,7 @@ Vagrant.configure("2") do |config|
     ansible_tags = [tags_only.split(",")]
   end
   
-  if (tests_tag == "true")
-    ansible_tags = ['tests']
-  end
+  ansible_tags.concat(['tests'])
   
   config.vm.provision :ansible_local do |ansible|
     ansible.playbook = "ansible/playbook.yml"
@@ -177,9 +175,5 @@ Vagrant.configure("2") do |config|
   config.vm.network :forwarded_port, guest: 8080, host: 8080, auto_correct: true 
 
   end
-
-  # config.ssh.username = 'root'
-  # config.ssh.password = 'vagrant'
-  # config.ssh.insert_key = 'true'
 
 end
